[tool.poetry]
name = "grasp-hpo"
version = "0.1.0"
description = ""
authors = ["Gabriel Otsuka <gabriel.otsuka@gmail.com>"]
readme = "README.md"
packages = [{include = "grasp_hpo"}]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.25.1"
scikit-learn = "^1.3.0"
pandas = "^2.0.3"
skopt = "^0.8.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
